[package]
name = "local_lru"
version = "0.2.2"
license = "MIT"
description = "A simple, thread-safe and lock-free LRU cache based on thread local storage."
repository = "https://github.com/a-agmon/LocalLRU"
documentation = "https://docs.rs/local_lru/0.2.1"
edition = "2021"

[dependencies]
bytes = "1.7.2"
