[package]
name = "local_lru"
version = "0.4.5"
license = "MIT"
description = "A simple, thread-safe and lock-free LRU cache based on thread local storage."
repository = "https://github.com/a-agmon/LocalLRU"
documentation = "https://docs.rs/local_lru/0.4.5"
readme = "README.md"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.9.0", features = [
    "std",
] }
serde = { version = "1.0.216", features = [
    "derive",
] }
